--- a/erlang.css
+++ b/erlang.css
@@ -982,6 +982,13 @@ footer p{
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
 	}
+	header.scroll nav div span a {
+		font-variant : small-caps;
+		text-transform: lowercase;
+
+		
+	}
+	
 }
 @media screen and (max-width: 1000px) {
 	section.agenda ul{
