--- a/erlang.css
+++ b/erlang.css
@@ -982,7 +982,7 @@ footer p{
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
 	}
-	header.scroll nav div span a {
+	header nav div span a {
 		margin-left : 7px;
 	}
 }
