--- a/erlang.css
+++ b/erlang.css
@@ -982,11 +982,9 @@ footer p{
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
 	}
-	header.scroll nav div span a {
+	header nav div span a {
 		margin-left : 7px;
-		
 	}
-	
 }
 @media screen and (max-width: 1000px) {
 	section.agenda ul{
