--- a/erlang.css
+++ b/erlang.css
@@ -40,8 +40,8 @@ body {
 }
 
 .iconic-mail {
-    display: block;
-    float: left;
+    display: inline-block;
+    /* float: left; */
     width: 24px;
     height: 17px;
     background-image: url(images/mail.png);
@@ -390,6 +390,10 @@ section.clients p{
 	line-height:150px;
 	text-align:center;
 }
+
+img[src*="kontakty"]{
+	border-radius : 50%;
+}
 section.clients p img{
 	vertical-align:middle;
 	margin-left:86px;
@@ -490,9 +494,9 @@ section.speakers div[class="prop_email prop_n"]{
 }
 
 section.speakers div figure{
-	width:181px;
+	width: 100%;
 	display:inline-block;
-	margin:0 0 35px 89px;
+	/*margin:0 0 35px 89px;*/	
 	text-align:center;
 }
 section.speakers div figure:nth-child(4n-3){
@@ -742,14 +746,26 @@ section.agenda ul li div h3{
 	font-weight:500;
 	color:#111;
 }
-section.agenda ul li div p{
+section.agenda ul li div p {
 	font-family:OpenSansL;
-	font-size:13px;
+	font-size:18px;
 	color:#111;
-	line-height:21px;
-	margin-top:8px;
+	line-height:27px;
+	margin-top:22px;
+	margin-bottom:22px;
 	display:none;
 }
+
+.analytics{
+	font-family:OpenSansL;
+	font-size:18px;
+	color:#fff;
+	line-height:27px;
+	margin-top:22px;
+	margin-bottom:22px;
+}
+
+
 section.agenda ul li div b{
 	margin-top:7px;
 	color:#4db2c6;
